Add register function

--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -45,13 +45,12 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
             vitae leo.</p>
         </div>
-        <form action="/complete" method="POST">
-          <div class="form-group"><label for="name">User name</label><input class="form-control item" type="text" id="name" name="name">
-          </div>
+        <form action="/registerComplete" method="POST">
+          <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email"
+            id="email" name="email"></div>
           <div class="form-group"><label for="password">Password</label><input class="form-control item" type="password"
               id="password" name="password"></div>
-          <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email"
-              id="email"></div><button class="btn btn-primary btn-block" type="submit">Sign Up</button>
+          <button class="btn btn-primary btn-block" type="submit">Sign Up</button>
         </form>
       </div>
     </section>
