--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,41 +1,10 @@
-<!DOCTYPE html>
-<html>
+<%- include("header"); -%>
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>JS Club</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
-</head>
-
-<body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">JS CLUB</a>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active logo" href="#">trang chủ</a></li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tin Tức</a><a class="dropdown-item" role="presentation" href="#">Confession</a></div>
-                    </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Training&nbsp;</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tài Liệu</a><a class="dropdown-item" role="presentation" href="#">Lịch Học</a></div>
-                    </li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us">VỀ CHÚNG TÔI</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/login">đăng nhập</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="/registration">ĐĂNG KÝ</a></li>
-                </ul>
-            </div><button data-target="#navcol-1" data-toggle="collapse" class="navbar-toggler"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
-    </nav>
     <main class="page landing-page">
-        <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/tech/image4.jpg&quot;);color: rgba(255,0,0,0.5);">
+        <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/tech/bg.png&quot;);color: rgba(145,52,52,0.53);filter: blur(0px) contrast(100%);">
             <div class="text">
-                <h2>Chào mừng ae đến với trang của tui?</h2>
-                <p>Hay là một cái gì đó tương tự. Nút learn more này dẫn đi đâu đc nhỉ?</p><button class="btn btn-outline-light btn-lg" type="button">Learn More</button></div>
+                <h2 class="display-4">JS - Japanese Software Engineers</h2>
+                <p>@fu.jsclub</p><button class="btn btn-outline-light btn-lg" type="button">Learn More</button></div>
         </section>
         <section class="clean-block clean-info dark">
             <div class="container">
@@ -49,7 +18,7 @@
                         <h3>Lorem impsum dolor sit amet</h3>
                         <div class="getting-started-info">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                        </div><button class="btn btn-outline-primary btn-lg" type="button">Join Now</button></div>
+                        </div><a class="btn btn-outline-primary btn-lg" role="button" href="login">Join Now</a></div>
                 </div>
             </div>
         </section>
@@ -139,18 +108,4 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer dark">
-        <div class="footer-copyright">
-            <p>© 2020 Tamkien Cao</p>
-        </div>
-    </footer>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="assets/js/smoothproducts.min.js"></script>
-    <script src="assets/js/theme.js"></script>
-    <script src="assets/js/bs-animation.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-</body>
-
-</html>
+<%- include("footer"); -%>
