--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -1,72 +1,24 @@
-<!DOCTYPE html>
-<html>
+<%- include("header"); -%>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-  <title>Register - Brand</title>
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-  <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-  <link rel="stylesheet" href="assets/css/smoothproducts.css">
-</head>
-
-<body>
-  <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-    <div class="container"><a class="navbar-brand logo" href="#">JS CLUB</a>
-      <div class="collapse navbar-collapse" id="navcol-1">
-        <ul class="nav navbar-nav ml-auto">
-          <li class="nav-item" role="presentation"><a class="nav-link logo" href="#">trang chủ</a></li>
-          <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"
-              href="#">bài viết&nbsp;</a>
-            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tin Tức</a><a
-                class="dropdown-item" role="presentation" href="#">Confession</a></div>
-          </li>
-          <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false"
-              href="#">Training&nbsp;</a>
-            <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tài Liệu</a><a
-                class="dropdown-item" role="presentation" href="#">Lịch Học</a></div>
-          </li>
-          <li class="nav-item" role="presentation"><a class="nav-link" href="/about-us">VỀ CHÚNG TÔI</a></li>
-          <li class="nav-item" role="presentation"><a class="nav-link" href="/login">đăng nhập</a></li>
-          <li class="nav-item" role="presentation"><a class="nav-link active" href="/registration">ĐĂNG KÝ</a></li>
-        </ul>
-      </div><button data-target="#navcol-1" data-toggle="collapse" class="navbar-toggler"><span class="sr-only">Toggle
-          navigation</span><span class="navbar-toggler-icon"></span></button>
-    </div>
-  </nav>
   <main class="page registration-page">
     <section class="clean-block clean-form dark">
       <div class="container">
         <div class="block-heading">
-          <h2 class="text-info">Registration</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis
-            vitae leo.</p>
+          <h2 class="text-info">Đăng Ký</h2>
+          <p>Bạn đã có tài khoản? <a href="login">Đăng nhập</a></p>
+          <% if (registerFail) {%>
+            <div class="btn-warning">Email đã tồn tại</div>
+          <% } %>
         </div>
-        <form action="/registerComplete" method="POST">
+        <form method="POST" action="/registerComplete">
           <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email"
             id="email" name="email"></div>
-          <div class="form-group"><label for="password">Password</label><input class="form-control item" type="password"
+          <div class="form-group"><label for="password">Mật Khẩu</label><input class="form-control item" type="password"
               id="password" name="password"></div>
-          <button class="btn btn-primary btn-block" type="submit">Sign Up</button>
+          <button class="btn btn-primary btn-block" type="submit">Đăng Ký</button>
         </form>
       </div>
     </section>
   </main>
-  <footer class="page-footer dark">
-    <div class="footer-copyright">
-      <p>© 2020 Tamkien Cao</p>
-    </div>
-  </footer>
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-  <script src="assets/js/smoothproducts.min.js"></script>
-  <script src="assets/js/theme.js"></script>
-  <script src="assets/js/bs-animation.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
-</body>
 
-</html>
+<%- include("footer"); -%>
