Add profile page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include("header"); -%>
-
+<script src="/socket.io/socket.io.js"></script>
     <main class="page landing-page">
         <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/tech/bg.png&quot;);color: rgba(145,52,52,0.53);filter: blur(0px) contrast(100%);">
             <div class="text">
