--- a/views/InfoUpdate.ejs
+++ b/views/InfoUpdate.ejs
@@ -8,7 +8,7 @@
                         <div class="alert alert-info absolue center" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span></button><span>Profile save with success</span></div>
                     </div>
                 </div>
-                <form>
+                <form action="/InfoUpdated" method="POST">
                     <div class="form-row profile-row">
                         <div class="col-md-4 relative">
                             <div class="avatar">
@@ -17,30 +17,27 @@
                         <div class="col-md-8">
                             <h1>Cập nhật thông tin cá nhân</h1>
                             <hr>
-                            <div class="form-row">
-                                <div class="col-sm-12 col-md-6">
-                                    <div class="form-group"><label>Họ</label><input class="form-control" type="text" name="firstname"></div>
-                                </div>
-                                <div class="col-sm-12 col-md-6">
-                                    <div class="form-group"><label>Tên</label><input class="form-control" type="text" name="lastname"></div>
-                                </div>
-                                <div class="col"><label>Số điện thoại</label><input class="form-control" type="text" name="phoneNum"></div>
-                                <div class="col-sm-12 col-md-6">
-                                    <div class="form-group"><label>Email </label><input class="form-control" type="email" autocomplete="off" required="" name="schoolEmail"></div>
-                                </div>
-                            </div>
-                            <div class="form-row">
-                                <div class="col-sm-12 col-md-6">
-                                    <div class="form-group"><label>Ngày sinh</label><input class="form-control" type="date" name="dob" autocomplete="off" required=""></div>
-                                </div>
-                                <div class="col-sm-12 col-md-6">
-                                    <div class="form-group"><label>Nơi ở&nbsp;</label><input class="form-control" type="text" name="address" autocomplete="off" required=""></div>
-                                </div>
-                            </div>
-                            <hr>
-                            <div class="form-row">
-                                <div class="col-md-12 content-right"><button class="btn btn-primary form-btn" type="submit">LƯU</button><button class="btn btn-danger form-btn" type="reset">HỦY</button></div>
-                            </div>
+                              <div class="form-row">
+                                  <div class="col-sm-12">
+                                      <div class="form-group"><label>Tên</label><input class="form-control" type="text" name="name"></div>
+                                  </div>
+                                  <div class="col"><label>Số điện thoại</label><input class="form-control" type="text" name="phone"></div>
+                                  <div class="col-sm-12 col-md-6">
+                                      <div class="form-group"><label>School Email </label><input class="form-control" type="schoolEmail" autocomplete="off" name="schoolEmail"></div>
+                                  </div>
+                              </div>
+                              <div class="form-row">
+                                  <div class="col-sm-12 col-md-6">
+                                      <div class="form-group"><label>Ngày sinh</label><input class="form-control" type="date" name="dob" autocomplete="off"></div>
+                                  </div>
+                                  <div class="col-sm-12 col-md-6">
+                                      <div class="form-group"><label>Nơi ở&nbsp;</label><input class="form-control" type="text" name="home" autocomplete="off"></div>
+                                  </div>
+                              </div>
+                              <hr>
+                              <div class="form-row">
+                                  <div class="col-md-12 content-right"><button class="btn btn-primary form-btn" type="submit">LƯU</button><button class="btn btn-danger form-btn" type="reset">HỦY</button></div>
+                              </div>
                         </div>
                     </div>
                 </form>
