--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <script src="https://kit.fontawesome.com/49acb99de8.js" crossorigin="anonymous"></script>
 </head>
 
 
 <body>
-    
+  <script src="/socket.io/socket.io.js"></script>
+  <script>
+    var socket = io();
+  </script>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
         <div class="container"><a class="navbar-brand logo" href="/">JS CLUB</a>
             <div class="collapse navbar-collapse" id="navcol-1">
