--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,4 @@
 <%- include("header"); -%>
-<script src="/socket.io/socket.io.js"></script>
     <main class="page landing-page">
         <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/tech/bg.png&quot;);color: rgba(145,52,52,0.53);filter: blur(0px) contrast(100%);">
             <div class="text">
@@ -9,15 +8,15 @@
         <section class="clean-block clean-info dark">
             <div class="container">
                 <div data-aos="fade" class="block-heading">
-                    <h2 class="text-info">Info</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <h2 class="text-info">Our story</h2>
+                    <p>JS Club là tên viết tắt của Japanese Software Engineers Club – Câu lạc bộ Kỹ sư phần mềm Nhật Bản. </p>
                 </div>
                 <div class="row align-items-center" data-aos="fade">
                     <div class="col-md-6"><img class="img-thumbnail" src="assets/img/scenery/image5.jpg"></div>
                     <div class="col-md-6">
-                        <h3>Lorem impsum dolor sit amet</h3>
+                        <h3>“JS Club - Ichigo ichie” (JS Club - Nhất kì nhất hội)</h3>
                         <div class="getting-started-info">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Từ những ngày đầu thành lập, JS mang sứ mạng trở thành một cộng đồng kết nối các sinh viên theo chuyên ngành hẹp JS. Sau này, câu lạc bộ được mở rộng, trở thành nơi chia sẻ kiến thức của các sinh viên YÊU THÍCH TIẾNG NHẬT và ĐAM MÊ LẬP TRÌNH.</p>
                         </div><a class="btn btn-outline-primary btn-lg" role="button" href="login">Join Now</a></div>
                 </div>
             </div>
