--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -1,43 +1,43 @@
 <%- include("header"); -%>
 
 <main class="page">
-    <section class="clean-block about-us">
-        <div class="container">
-            <div class="block-heading">
-                <h2 class="text-info">About Us</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+  <section class="clean-block about-us">
+    <div class="container" data-aos="fade">
+        <div class="block-heading">
+            <h2 class="text-info">Về chúng tôi</h2>
+            <p>Những CTV đẹp trai nhất JS</p>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-sm-6 col-lg-4">
+                <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/index-5.jfif" style="width: 348px; height: 232px;">
+                    <div class="card-body info">
+                        <h4 class="card-title">Cao Tam Kiên</h4>
+                        <p class="card-text">Tui là một abcxyz. Viết thêm một cái gì đó cho đủ 2 dòng.</p>
+                        <div class="icons"><a href="https://www.facebook.com/TamkienCao" target="_blank"><i class="icon-social-facebook"></i></a><a href="mailto:cao99@bk.ru" target="_blank"><i class="icon-envelope"></i></a></div>
+                    </div>
+                </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
-                        <div class="card-body info">
-                            <h4 class="card-title">John Smith</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                        </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/index-6.jpg" style="width: 348px; height: 232px;">
+                    <div class="card-body info">
+                        <h4 class="card-title">Ngô Quốc Bảo</h4>
+                        <p class="card-text">Chủ tịch JS tương lai</p>
+                        <div class="icons"><a href="https://www.facebook.com/ngoquoc.bao.5"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-envelope"></i></a></div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
-                        <div class="card-body info">
-                            <h4 class="card-title">Robert Downturn</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                        <div class="card-body info">
-                            <h4 class="card-title">Ally Sanders</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                        </div>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/index-7.jpg" style="width: 348px; height: 232px;">
+                    <div class="card-body info">
+                        <h4 class="card-title">Chu Tuấn Thông</h4>
+                        <p class="card-text">Đẹp trai nhất thế giới</p>
+                        <div class="icons"><a href="https://www.facebook.com/chu.thong.16547"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-envelope"></i></a></div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 </main>
 
 <%- include("footer"); -%>
