--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
                     <p>JS Club là tên viết tắt của Japanese Software Engineers Club – Câu lạc bộ Kỹ sư phần mềm Nhật Bản. </p>
                 </div>
                 <div class="row align-items-center" data-aos="fade">
-                    <div class="col-md-6"><img class="img-thumbnail" src="assets/img/scenery/image5.jpg"></div>
+                    <div class="col-md-6"><img class="img-thumbnail" src="assets/img/index-1.png"></div>
                     <div class="col-md-6">
                         <h3>“JS Club - Ichigo ichie” (JS Club - Nhất kì nhất hội)</h3>
                         <div class="getting-started-info">
@@ -24,25 +24,25 @@
         <section class="clean-block features">
             <div class="container" data-aos="fade">
                 <div class="block-heading">
-                    <h2 class="text-info">Features</h2>
-                    <p>Thay được cái gì vào đây nhỉ?</p>
+                    <h2 class="text-info">Con người JS</h2>
+                    <p>Chắc hẳn ai cũng tò mò?</p>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
-                        <h4>Bootstrap 4</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4>Toàn các siêu nhân</h4>
+                        <p>Rất nhiều các anh chị đã từng chinh phục các cuộc thi lớn nhỏ trong và ngoài trường như ACM, Code war hay thậm chí cả các cuộc thi về an ninh mạng</p>
                     </div>
                     <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
-                        <h4>Customizable</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4>Cần cù</h4>
+                        <p>Con người JS là những rất chịu khó, chăm chỉ trong công việc. Không ngại những gian khổ để có những sản phẩm tuyệt vời.</p>
                     </div>
                     <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
-                        <h4>Responsive</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4>Game thủ</h4>
+                        <p>Ngoài các công việc trong CLB, những người trong JS còn được ví như các game thủ chuyên nghiệp như Faker, Levi trong FPT.</p>
                     </div>
                     <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4>All Browser Compatibility</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                        <h4>Đoàn kết</h4>
+                        <p>Luôn tương trợ lẫn nhau trong lúc khó khăn. Cho dù bên trong hay bên ngoài CLB, hễ ai gặp khó khăn là luôn có anh em trong CLB giúp đỡ.</p>
                     </div>
                 </div>
             </div>
@@ -50,14 +50,14 @@
         <section class="clean-block slider dark">
             <div class="container" data-aos="fade">
                 <div class="block-heading">
-                    <h2 class="text-info">Kiếm được ảnh thì để ở đây</h2>
-                    <p>Có thì tốt, không thì tôi sẽ dẹp phần này.</p>
+                    <h2 class="text-info">Ảnh sưu tập</h2>
+                    <p>Các hoạt động trong CLB.</p>
                 </div>
                 <div class="carousel slide" data-ride="carousel" id="carousel-1">
                     <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/scenery/image1.jpg" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image4.jpg" alt="Slide Image"></div>
-                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/scenery/image6.jpg" alt="Slide Image"></div>
+                        <div class="carousel-item active"><img class="w-100 d-block" src="assets/img/index-2.jpg" alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/index-3.jpg" alt="Slide Image"></div>
+                        <div class="carousel-item"><img class="w-100 d-block" src="assets/img/index-4.jpg" alt="Slide Image"></div>
                     </div>
                     <div><a class="carousel-control-prev" href="#carousel-1" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span><span class="sr-only">Previous</span></a><a class="carousel-control-next" href="#carousel-1" role="button"
                             data-slide="next"><span class="carousel-control-next-icon"></span><span class="sr-only">Next</span></a></div>
@@ -73,11 +73,11 @@
             <div class="container" data-aos="fade">
                 <div class="block-heading">
                     <h2 class="text-info">Về chúng tôi</h2>
-                    <p>Thật may là trang này để 3 người rất vừa vặn</p>
+                    <p>Những CTV đẹp trai nhất JS</p>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/index-5.jfif" style="width: 348px; height: 232px;">
                             <div class="card-body info">
                                 <h4 class="card-title">Cao Tam Kiên</h4>
                                 <p class="card-text">Tui là một abcxyz. Viết thêm một cái gì đó cho đủ 2 dòng.</p>
@@ -86,20 +86,20 @@
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/index-6.jpg" style="width: 348px; height: 232px;">
                             <div class="card-body info">
-                                <h4 class="card-title">Robert Downturn</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-envelope"></i></a></div>
+                                <h4 class="card-title">Ngô Quốc Bảo</h4>
+                                <p class="card-text">Chủ tịch JS tương lai</p>
+                                <div class="icons"><a href="https://www.facebook.com/ngoquoc.bao.5"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-envelope"></i></a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4">
-                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
+                        <div class="card clean-card text-center"><img class="card-img-top w-100 d-block" src="assets/img/index-7.jpg" style="width: 348px; height: 232px;">
                             <div class="card-body info">
-                                <h4 class="card-title">Ally Sanders</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-envelope"></i></a></div>
+                                <h4 class="card-title">Chu Tuấn Thông</h4>
+                                <p class="card-text">Đẹp trai nhất thế giới</p>
+                                <div class="icons"><a href="https://www.facebook.com/chu.thong.16547"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-envelope"></i></a></div>
                             </div>
                         </div>
                     </div>
