add content training

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -29,10 +29,8 @@
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
                         <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tin Tức</a><a class="dropdown-item" role="presentation" href="#">Confession</a></div>
                     </li>
-                    <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">Training&nbsp;</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tài Liệu</a><a class="dropdown-item" role="presentation" href="#">Lịch Học</a></div>
-                    </li>
-                      <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us">VỀ CHÚNG TÔI</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="training">Training</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us">VỀ CHÚNG TÔI</a></li>
                     <% if (login != 1) { %>
                       <li class="nav-item" role="presentation"><a class="nav-link" href="login">đăng nhập</a></li>
                       <li class="nav-item" role="presentation"><a class="nav-link" href="registration">ĐĂNG KÝ</a></li>
