add content training

--- a/views/training.ejs
+++ b/views/training.ejs
@@ -21,9 +21,11 @@
                                 <li><i class="fas fa-calendar fa-li"></i>01/02/2020</li>
                                 <li><i class="far fa-calendar fa-li"></i>10/02/2020</li>
                                 <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv1</a></li>
-                                <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/open?id=0B_Dd-qODogA6flRmQjh2UV9Pb</a></li>
+                                <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/gA6flRmQjh2UV9Pb</a></li>
                               </ul>
-                              <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button></div>
+                              <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
+                              <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
+                            </div>
                         </div>
                     </div>
                     <div class="clean-blog-post">
@@ -39,9 +41,11 @@
                                   <li><i class="fas fa-calendar fa-li"></i>13/02/2020</li>
                                   <li><i class="far fa-calendar fa-li"></i>23/02/2020</li>
                                   <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv2</a></li>
-                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/open?id=0B_Dd-qODogA6flRmQjh2UV9Pb</a></li>
+                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/ogA6flRmQjh2UV9Pb</a></li>
                                 </ul>
-                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button></div>
+                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
+                                <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
+                              </div>
                         </div>
                     </div>
                     <div class="clean-blog-post">
@@ -57,9 +61,11 @@
                                   <li><i class="fas fa-calendar fa-li"></i>27/02/2020</li>
                                   <li><i class="far fa-calendar fa-li"></i>03/03/2020</li>
                                   <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv3</a></li>
-                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/open?id=0B_Dd-qODogA6flRmQjh2UV9Pb</a></li>
+                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/gA6flRmQjh2UV9Pb</a></li>
                                 </ul>
-                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button></div>
+                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
+                                <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
+                              </div>
                         </div>
                     </div>
                     <div class="clean-blog-post">
@@ -75,9 +81,11 @@
                                   <li><i class="fas fa-calendar fa-li"></i>09/03/2020</li>
                                   <li><i class="far fa-calendar fa-li"></i>20/03/2020</li>
                                   <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv4</a></li>
-                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/open?id=0B_Dd-qODogA6flRmQjh2UV9Pb</a></li>
+                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/gA6flRmQjh2UV9Pb</a></li>
                                 </ul>
-                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button></div>
+                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
+                                <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
+                              </div>
                         </div>
                     </div>
                 </div>
