--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -11,10 +11,12 @@
           <% } %>
         </div>
         <form method="POST" action="/registerComplete">
-          <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email"
-            id="email" name="email"></div>
+          <div class="form-group"><label for="username">Username</label><input class="form-control item" type="text"
+            id="username" name="username"></div>
           <div class="form-group"><label for="password">Mật Khẩu</label><input class="form-control item" type="password"
               id="password" name="password"></div>
+          <div class="form-group"><label for="email">Email</label><input class="form-control item" type="email"
+            id="email" name="email"></div>
           <button class="btn btn-primary btn-block" type="submit">Đăng Ký</button>
         </form>
       </div>
