Added some major features

--- a/views/InfoUpdate.ejs
+++ b/views/InfoUpdate.ejs
@@ -23,7 +23,7 @@
                                   </div>
                                   <div class="col"><label>Số điện thoại</label><input class="form-control" type="text" name="phone"></div>
                                   <div class="col-sm-12 col-md-6">
-                                      <div class="form-group"><label>School Email </label><input class="form-control" type="schoolEmail" autocomplete="off" name="schoolEmail"></div>
+                                      <div class="form-group"><label>School Email </label><input class="form-control" type="email" autocomplete="off" name="schoolEmail"></div>
                                   </div>
                               </div>
                               <div class="form-row">
