--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+  
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <link rel="stylesheet" href="assets/css/Pretty-User-List.css">
     <script src="https://kit.fontawesome.com/49acb99de8.js" crossorigin="anonymous"></script>
 </head>
 
@@ -27,17 +28,16 @@
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link logo" href="/">trang chủ</a></li>
                     <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" href="#">bài viết&nbsp;</a>
-                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="#">Tin Tức</a><a class="dropdown-item" role="presentation" href="#">Confession</a></div>
+                        <div class="dropdown-menu" role="menu"><a class="dropdown-item" role="presentation" href="/post-list">Tin Tức</a><a class="dropdown-item" role="presentation" href="#">Confession</a></div>
                     </li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="training">Training</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="about-us">VỀ CHÚNG TÔI</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="/training">Training</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/about-us">VỀ CHÚNG TÔI</a></li>
                     <% if (login != 1) { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="login">đăng nhập</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="registration">ĐĂNG KÝ</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/login">đăng nhập</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/registration">ĐĂNG KÝ</a></li>
                     <% } else { %>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="user">trang cá nhân</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="members">thành viên</a></li>
-                      <li class="nav-item" role="presentation"><a class="nav-link" href="logout">đăng xuất</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/profile">trang cá nhân</a></li>
+                      <li class="nav-item" role="presentation"><a class="nav-link" href="/logout">đăng xuất</a></li>
                     <% } %>
                 </ul>
             </div><button data-target="#navcol-1" data-toggle="collapse" class="navbar-toggler"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button></div>
