--- a/views/training.ejs
+++ b/views/training.ejs
@@ -8,88 +8,49 @@
                     <p>Các thành viên phải tham gia đầy đủ đúng giờ các buổi. Các mentor gửi lại slide cho trưởng ban.</p>
                 </div>
                 <div class="block-content">
+                  <% for (let i of trainings) { %>
                     <div class="clean-blog-post">
                         <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/training/2.jpg"></div>
+                            <div class="col-lg-5 dmDivImg"><img class="rounded img-fluid dmmImg" src="" ></div>
+                            <p class="dmpivot"><%= i.imgPath %></p>
                             <div class="col-lg-7">
-                              <h3>Javascript</h3>
-                              <div class="info"><span class="text-muted">Jan 16, 2020 by&nbsp;<a href="#">b21</a></span></div>
+                              <h3><%= i.name %></h3>
+                              <br>
                               <ul class="list-unstyled fa-ul">
-                                <li><i class="fas fa-user fa-li" style="font-size: 16px;"></i>Ngô Quốc Bảo</li>
-                                <li><i class="fas fa-phone fa-li"></i>09696996699</li>
-                                <li><i class="fas fa-location-arrow fa-li"></i>BE203</li>
-                                <li><i class="fas fa-calendar fa-li"></i>01/02/2020</li>
-                                <li><i class="far fa-calendar fa-li"></i>10/02/2020</li>
-                                <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv1</a></li>
-                                <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/gA6flRmQjh2UV9Pb</a></li>
+                                <li><i class="fas fa-user fa-li" style="font-size: 16px;"></i><%= i.mentor %></li>
+                                <li><i class="fas fa-phone fa-li"></i><%= i.phone %></li>
+                                <li><i class="fas fa-location-arrow fa-li"></i><%= i.room %></li>
+                                <li><i class="fas fa-calendar fa-li"></i><%= i.startDate %></li>
+                                <li><i class="far fa-calendar fa-li"></i><%= i.endDate %></li>
+                                <li><i class="fas fa-video fa-li"></i><a href=""><%= i.meet %></a></li>
+                                <li><i class="fas fa-link fa-li"></i><a href=""><%= i.link %></a></li>
                               </ul>
                               <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
                               <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
                             </div>
                         </div>
                     </div>
-                    <div class="clean-blog-post">
-                        <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/training/1.jfif"></div>
-                            <div class="col-lg-7">
-                                <h3>Python</h3>
-                                <div class="info"><span class="text-muted">Feb 02, 2020 by&nbsp;<a href="#">b21</a></span></div>
-                                <ul class="list-unstyled fa-ul">
-                                  <li><i class="fas fa-user fa-li" style="font-size: 16px;"></i>Cao Tam Kiên</li>
-                                  <li><i class="fas fa-phone fa-li"></i>09696996699</li>
-                                  <li><i class="fas fa-location-arrow fa-li"></i>BE204</li>
-                                  <li><i class="fas fa-calendar fa-li"></i>13/02/2020</li>
-                                  <li><i class="far fa-calendar fa-li"></i>23/02/2020</li>
-                                  <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv2</a></li>
-                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/ogA6flRmQjh2UV9Pb</a></li>
-                                </ul>
-                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
-                                <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
-                              </div>
-                        </div>
+                    <% } %>
                     </div>
-                    <div class="clean-blog-post">
-                        <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/training/3.jfif"></div>
-                            <div class="col-lg-7">
-                                <h3>C++</h3>
-                                <div class="info"><span class="text-muted">Feb 26, 2020 by&nbsp;<a href="#">b21</a></span></div>
-                                <ul class="list-unstyled fa-ul">
-                                  <li><i class="fas fa-user fa-li" style="font-size: 16px;"></i>Chu Tuấn Thông</li>
-                                  <li><i class="fas fa-phone fa-li"></i>09696996699</li>
-                                  <li><i class="fas fa-location-arrow fa-li"></i>BE205</li>
-                                  <li><i class="fas fa-calendar fa-li"></i>27/02/2020</li>
-                                  <li><i class="far fa-calendar fa-li"></i>03/03/2020</li>
-                                  <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv3</a></li>
-                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/gA6flRmQjh2UV9Pb</a></li>
-                                </ul>
-                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
-                                <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
-                              </div>
-                        </div>
-                    </div>
-                    <div class="clean-blog-post">
-                        <div class="row">
-                            <div class="col-lg-5"><img class="rounded img-fluid" src="assets/img/training/4.jfif"></div>
-                            <div class="col-lg-7">
-                                <h3>Java</h3>
-                                <div class="info"><span class="text-muted">March 26, 2020 by&nbsp;<a href="#">b21</a></span></div>
-                                <ul class="list-unstyled fa-ul">
-                                  <li><i class="fas fa-user fa-li" style="font-size: 16px;"></i>Cao Tam Kiên</li>
-                                  <li><i class="fas fa-phone fa-li"></i>09696996699</li>
-                                  <li><i class="fas fa-location-arrow fa-li"></i>BE203</li>
-                                  <li><i class="fas fa-calendar fa-li"></i>09/03/2020</li>
-                                  <li><i class="far fa-calendar fa-li"></i>20/03/2020</li>
-                                  <li><i class="fas fa-video fa-li"></i><a href="">https://meet.google.com/ank-ygdo-rv4</a></li>
-                                  <li><i class="fas fa-link fa-li"></i><a href="">https://drive.google.com/gA6flRmQjh2UV9Pb</a></li>
-                                </ul>
-                                <button class="btn btn-outline-primary btn-sm" type="button">Chi tiết</button>
-                                <button class="btn btn-outline-warning btn-sm" type="button">Đăng ký tham gia</button>
-                              </div>
-                        </div>
-                    </div>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <% if (login == 1) { %>
+                    <form action="addTraining">
+                      <button class="btn btn-primary btn-lg" type="submit" href="addTraining">Thêm training</button>
+                    </form>
+                    <% } %>
                 </div>
             </div>
         </section>
     </main>
+    <script>
+      let a = document.getElementsByClassName("dmpivot");
+      let b = document.getElementsByClassName("dmmImg");
+      for (let i in a) {
+        b[i].setAttribute("src", a[i].textContent)
+        a[i].hidden = true
+      }
+    </script>
     <%- include("footer"); -%>
