Added learnmore link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,10 @@
         <section class="clean-block clean-hero" style="background-image: url(&quot;assets/img/tech/bg.png&quot;);color: rgba(145,52,52,0.53);filter: blur(0px) contrast(100%);">
             <div class="text">
                 <h2 class="display-4">JS - Japanese Software Engineers</h2>
-                <p>@fu.jsclub</p><button class="btn btn-outline-light btn-lg" type="button">Learn More</button></div>
+                <p>@fu.jsclub</p>
+                <form action="/post/5e7cc58563e6231394b1d09e" method="GET">
+                  <button class="btn btn-outline-light btn-lg" type="submit">Learn More</button></div>
+                </form>
         </section>
         <section class="clean-block clean-info dark">
             <div class="container">
