Added some training features, avatar

--- a/views/InfoUpdate.ejs
+++ b/views/InfoUpdate.ejs
@@ -13,7 +13,10 @@
                         <div class="col-md-4 relative">
                             <div class="avatar">
                                 <div class="avatar-bg center"></div>
-                            </div><input type="file" class="form-control" name="avatar-file"></div>
+                            </div>
+                            <label>Link ảnh đại diện</label>
+                            <input type="text" class="form-control" name="avatarFile">
+                        </div>
                         <div class="col-md-8">
                             <h1>Cập nhật thông tin cá nhân</h1>
                             <hr>
