--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -8,7 +8,8 @@
             <div class="row user-list">
               <% for (let i of status) { %>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 user-item">
-                    <div class="user-container"><a class="user-avatar userdmml" href="#"><img class="rounded-circle img-fluid" src="assets/img/avatar.jpg" width="48" height="48" alt="Profile of Mark Smith Peterson"></a>
+                    <% let src = (i.avatarFile == undefined ? "assets/img/avatars/1.jpg" : i.avatarFile) %>
+                    <div class="user-container"><a class="user-avatar userdmml" href="#"><img class="rounded-circle img-fluid" src="<%= src %>" width="48" height="48" alt="Profile of Mark Smith Peterson"></a>
                         
                         <p class="user-name"><a href="#" class="userlinkdm userdmmle" style="color: black;" onmouseover="this.style.color='blue'" onmouseout="this.style.color='black'"><%= i.username %></a><span>
                         <% if (i.socket !== undefined && i.socket.length) { %>
