Add show training

--- a/views/addTraining.ejs
+++ b/views/addTraining.ejs
@@ -25,6 +25,14 @@
             name="link"></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
             name="imgPath"></div>
+        <div class="form-group"><label for="brief">Giới thiệu</label><input class="form-control item" type="text" id="brief"
+            name="brief"></div>
+        <div class="form-group"><label for="popular">Độ phổ biến</label><input class="form-control item" type="text" id="popular"
+            name="popular"></div>
+        <div class="form-group"><label for="requirement">Yêu cầu</label><input class="form-control item" type="text" id="requirement"
+            name="requirement1"></div>
+        <div class="form-group"><label for="syllabus">Syllabus</label><input class="form-control item" type="text" id="syllabus"
+            name="syllabus"></div>
         </br>
         <button class="btn btn-primary btn-block" type="submit">Tạo training</button>
       </form>
