--- a/views/editTraining.ejs
+++ b/views/editTraining.ejs
@@ -25,6 +25,14 @@
             name="link" value="<%= val.link %>"></div>
         <div class="form-group"><label for="imgPath">Link Ảnh</label><input class="form-control item" type="text" id="imgPath"
             name="imgPath" value="<%= val.imgPath %>"></div>
+        <div class="form-group"><label for="brief">Giới thiệu</label><textarea class="form-control item" type="text" id="brief"
+            name="brief"><%= val.brief %></textarea></div>
+        <div class="form-group"><label for="popular">Độ phổ biến</label><textarea class="form-control item" type="text" id="popular"
+            name="popular"><%= val.popular %></textarea></div>
+        <div class="form-group"><label for="requirement">Yêu cầu</label><textarea class="form-control item" type="text" id="requirement"
+            name="requirement1"><%= val.requirement1 %></textarea></div>
+        <div class="form-group"><label for="syllabus">Syllabus</label><textarea class="form-control item" type="text" id="syllabus"
+            name="syllabus"><%= val.syllabus %></textarea></div>
         </br>
         <button class="btn btn-primary btn-block" type="submit">Edit training</button>
       </form>
