--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -41,6 +41,7 @@
     <script src="assets/js/theme.js"></script>
     <script src="assets/js/sidebar.js"></script>
     <script src="assets/js/bs-animation.js"></script>
+    <script src="assets/js/micromodal.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
 </body>
 
