--- a/views/header.ejs
+++ b/views/header.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
     <link rel="stylesheet" href="assets/css/sidebar.css">
+    <link rel="stylesheet" href="assets/css/micromodal.css">
     <link rel="stylesheet" href="assets/css/Pretty-User-List.css">
     <script src="https://kit.fontawesome.com/49acb99de8.js" crossorigin="anonymous"></script>
 </head>
