--- a/views/training.ejs
+++ b/views/training.ejs
@@ -72,9 +72,11 @@
                                 <li><i class="fas fa-link fa-li"></i><a href=""><%= i.link %></a></li>
                               </ul>
                               <% let ok = 0 %>
+                              <% if (profile) { %>
                               <% for (let k of profile.training) {%>
                               <% if (k == i._id) {%>
                               <% ok = 1 %>
+                              <% } %>
                               <% } %>
                               <% } %>
                               <% if ( login == 1 && ( ok != 1 ) ) { %>
